--- a/AmazonWebApp/Web.config
+++ b/AmazonWebApp/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AmazonWebApp-20160612121328.mdf;Initial Catalog=aspnet-AmazonWebApp-20160612121328;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="AmazonWebAppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=AmazonWebAppContext-20160614011932; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|AmazonWebAppContext-20160614011932.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -22,29 +24,35 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
+    <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
@@ -88,4 +96,79 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="AWSECommerceServiceBinding">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding1">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding2">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding3">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding4">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding5">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding6">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding7">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding8">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding9">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding10">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding11" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePort" />
+      <endpoint address="https://webservices.amazon.ca/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding1"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortCA" />
+      <endpoint address="https://webservices.amazon.cn/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding2"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortCN" />
+      <endpoint address="https://webservices.amazon.de/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding3"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortDE" />
+      <endpoint address="https://webservices.amazon.es/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding4"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortES" />
+      <endpoint address="https://webservices.amazon.fr/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding5"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortFR" />
+      <endpoint address="https://webservices.amazon.in/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding6"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortIN" />
+      <endpoint address="https://webservices.amazon.it/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding7"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortIT" />
+      <endpoint address="https://webservices.amazon.co.jp/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding8"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortJP" />
+      <endpoint address="https://webservices.amazon.co.uk/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding9"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortUK" />
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10"
+        contract="AWSECommerceService.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
+    </client>
+  </system.serviceModel>
 </configuration>
